...
        blowOrTapControl.setSegmentItems(["Blow", "Tap"])
        blowOrTapControl.sliderBackgroundColor = .flatBlackDark
        blowOrTapControl.defaultTextColor = .flatBlackDark
        blowOrTapControl.font = UIFont(name: "AirAmericana", size: 15)!
        blowOrTapControl.backgroundColor = .clear
        blowOrTapControl.delegate = self
        blowOrTapControl.accessibilityLabel = "blowOrTap"
    }
    
    private func createSoundButtons() {
        let soundArray = ["CLow", "DFlat", "DNatural", "EFlat", "ENatural", "FNatural", "GFlat", "GNatural", "AFlat", "ANatural", "BFlat", "BNatural", "CHigh"]
        let titleArray = ["C\nLow", "C#/\nDb", "D", "D#/\nEb", "E", "F", "F#/\nGb", "G", "G#/\nAb", "A", "A#/\nBb", "B", "C\nHigh"]
        let hintArray = ["Low C", "C Sharp or D Flat", "D", "D Sharp or E Flat", "E", "F", "F Sharp or G Flat", "G",
                         "G Sharp or A Flat", "A", "A Sharp or B Flat", "B", "High C"]
        for button in spiralButtonsView.buttons {
            let index = button.tag - 1
            button.setTitle(titleArray[index], for: [])
            button.titleLabel?.font = UIFont(name: "AmericanTypewriter", size: 15)
            button.titleLabel?.numberOfLines = 0
...
