...
                                            </view>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JMN-eQ-XPh" customClass="SpiralButtonsView" customModule="Air_Pitch" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="60" width="375" height="523"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bIm-F6-cyi">
                                                        <rect key="frame" x="333" y="477" width="22" height="22"/>
                                                        <accessibility key="accessibilityConfiguration" label="info"/>
                                                        <connections>
                                                            <action selector="infoButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5iP-cY-yWS"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
...
                                        <fontDescription key="fontDescription" name="AmericanTypewriter" family="American Typewriter" pointSize="17"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A78-bZ-C9A">
                                        <rect key="frame" x="313" y="163" width="54" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="dismiss"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="96e-yh-qPR"/>
                                            <constraint firstAttribute="width" constant="54" id="O8M-AK-yfk"/>
                                        </constraints>
                                        <state key="normal" title="Dismiss">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
